# guardian_pay

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
contracts/: decision_trace_v1.schema.json  feature_signal_v1.schema.json  graph_signal_v1.schema.json  transaction_event_v1.schema.json
dashboard/: index.html  package.json  tsconfig.json
dashboard/src/: App.svelte
demo/checkout/: index.html
extension/: package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: content.ts
infra/kafka/: create-topics.sh
infra/observability/: loki.yaml
infra/opa/: policy.rego
python/feature-stream/: main.py
python/flink-feature-job/: README.md  feature_job.sql
python/quality-evaluator/: main.py
python/simulator/: app.py  requirements.txt
rust/: Cargo.toml  Dockerfile.service
rust/crates/common-models/: Cargo.toml
rust/crates/common-models/src/: lib.rs
rust/services/analytics-writer/: Cargo.toml
rust/services/analytics-writer/src/: main.rs
rust/services/gateway-api/: Cargo.toml
rust/services/gateway-api/src/: main.rs
rust/services/graph-service/: Cargo.toml
rust/services/graph-service/src/: main.rs
rust/services/risk-decider/: Cargo.toml
rust/services/risk-decider/src/: main.rs
rust/tools/replay-cli/: Cargo.toml
rust/tools/replay-cli/src/: main.rs
scripts/: run-core.ps1  run-full.ps1  run-quality.ps1  run-scenario.ps1  smoke-test.ps1
