[workspace]
resolver = "2"
members = [
  "crates/common-models",
  "services/gateway-api",
  "services/graph-service",
  "services/risk-decider",
  "services/analytics-writer",
  "tools/replay-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.12", features = ["chrono"] }
futures = "0.3"
hex = "0.4"
neo4rs = "0.7"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
