[package]
name = "analytics-writer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clickhouse.workspace = true
common-models = { path = "../../crates/common-models" }
futures.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
