[package]
name = "graph-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common-models = { path = "../../crates/common-models" }
futures.workspace = true
neo4rs.workspace = true
rdkafka.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
